Agrego modelo de Marlowe

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -79,6 +79,12 @@
   title        = {Documentation for the Cardano ecosystem},
   year         = {2015}
 }
+@misc{marlowe_playground,
+  author       = {IOHK},
+  howpublished = {\url{https://play.marlowe-finance.io/doc/marlowe/tutorials/escrow-ex.html}},
+  title        = {Playground for the simulations of contracts written in Marlowe},
+  year         = {2021}
+}
 
 @misc{cardano_utxo_ledger,
   author = {Corduan, Jared and Vinogradova, Polina and Gudemann, Matthias},
