Dejo todos los listings consistentes y bellos

--- a/languages.tex
+++ b/languages.tex
@@ -25,6 +25,7 @@
     upquote=true,
     captionpos=b,                    
     keepspaces=true,                 
+    frame=single,
     numbers=none,                    
     numbersep=5pt,                  
     showspaces=false,                
@@ -49,6 +50,8 @@
   columns=fixed,
   extendedchars,
   frame=single,
+  aboveskip=20pt,belowskip=20pt,
+  backgroundcolor=\color{backcolour},   
   basewidth={0.5em,0.45em},
   basicstyle=\ttfamily,
   mathescape,
