--- a/main.tex
+++ b/main.tex
@@ -1326,13 +1326,13 @@ Finalmente nos encontramos con el cuantificador universal $\bigvee$ y la implica
 
 Una teoría es una colección de tipos, funciones y teoremas, similar a un módulo en un lenguaje de programación. Todo el contenido que escribamos en Isabelle debe pertenecer a una teoría. El formato general de una teoría T es:
 
-\mybox{
-	\textbf{\texttt{theory}}\ $T$\\
-	\textbf{\texttt{imports}}\ $T_1 \ldots T_n$\\
-	\textbf{\texttt{begin}}\\
-	\textit{definitions, theorems and proofs}\\
-	\textbf{\texttt{end}}
-}
+\begin{lstlisting}[style=Isabelle]
+theory $T$
+imports $T_1, \cdots, T_n$
+begin
+$\text{definitions, theorems and proofs}$
+end
+\end{lstlisting}
 
 donde $T_1 \ldots T_n$ son los nombres de teorías existentes en las que $T$ está basado. Se dice que $T_i$ son las teorías padre de $T$. Todo lo definido en los padres de $T$ (y los padres de sus padres, recursivamente) es visible automáticamente. Cada teoría $T$ debe estar guardada en un archivo llamado \texttt{T.thy}.
 
@@ -1365,7 +1365,7 @@ Este tipo esta predefinido mediante:
 
 El mismo cuenta con los valores \texttt{True} y \texttt{False} y algunas funciones predefinidas,\\ como:  $\neg,\ \vee,\ \wedge,\ \rightarrow$, etc. El siguiente ejemplo muestra como puede definirse la conjunción lógica (conocida también como intersección en teoría de conjuntos) mediante `\textit{pattern matching}':
 
-\begin{lstlisting}[upquote=true, mathescape=true, basicstyle=\ttfamily]
+\begin{lstlisting}[style=Isabelle]
   fun conj :: "bool $\Rightarrow$ bool $\Rightarrow$ bool" where
   "conj True True = True" |
   "conj _ _ = False"}
@@ -1376,22 +1376,23 @@ Las definiciones de datatype y funciones siguen la sintaxis de lenguajes de prog
 \subsubsection{nat}
 Los números naturales y otros datatypes predefinidos.
 
-\texttt{datatype nat = 0 | Suc nat}
+\begin{lstlisting}[style=Isabelle]
+datatype nat = 0 | Suc nat
+\end{lstlisting}
 
 Todos los valores de tipo \texttt{nat} son generados por los constructores \texttt{0} y \texttt{Suc}. Por lo tanto, los valores de tipo nat son \texttt{0}, \texttt{Suc 0}, \texttt{Suc (Suc 0)}, etc. Algunas de las funciones predefinidas son: +, *, $\leq$, etc. A continuación, vemos como podríamos definir nuestra propia operación de suma:
 
-\begin{lstlisting}[upquote=true, mathescape=true, basicstyle=\ttfamily]
+\begin{lstlisting}[style=Isabelle]
   fun add :: "nat $\Rightarrow$ nat $\Rightarrow$ nat" where
   "add 0 n = n" |
   "add (Suc m) n = Suc(add m n)"
 \end{lstlisting}
 
 Y a continuación vemos una prueba de \texttt{add m 0 = m}:
-\begin{lstlisting}[upquote=true, mathescape=true, basicstyle=\ttfamily]
+\begin{lstlisting}[style=Isabelle]
   lemma add_02: "add m 0 = m"
   apply(induction m)
-  apply(
-	  
+  apply(auto)	  
   done
 \end{lstlisting}
 
@@ -1412,8 +1413,8 @@ De ahora en más dicho lema podría ser utilizado como algún paso de prueba por
 
 Las listas ya están predefinidas por Isabelle\footnote{Dicha definición puede ser encontrada en \href{https://isabelle.in.tum.de/library/HOL/HOL/List.html}{https://isabelle.in.tum.de/library/HOL/HOL/List.html}}, pero su definición puede ser simplificada como:
 
-\begin{lstlisting}[upquote=true, mathescape=true, basicstyle=\ttfamily]
-	datatype 'a list = Nil | Cons 'a "'a list"
+\begin{lstlisting}[style=Isabelle]
+datatype 'a list = Nil | Cons 'a "'a list"
 \end{lstlisting}
 
 \begin{itemize}
