--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -79,26 +79,19 @@
   title        = {Documentation for the Cardano ecosystem},
   year         = {2015}
 }
-@misc{marlowe_playground,
-  author       = {IOHK},
-  howpublished = {\url{https://play.marlowe-finance.io/doc/marlowe/tutorials/escrow-ex.html}},
-  title        = {Playground for the simulations of contracts written in Marlowe},
-  year         = {2021}
-}
-
 @misc{cardano_utxo_ledger,
   author = {Corduan, Jared and Vinogradova, Polina and Gudemann, Matthias},
   title  = {A Formal Specification of the Cardano Ledger},
   url    = {http://cardano-universe.com/wp-content/uploads/2019/02/ledger-spec.pdf},
   year   = {2019}
 }
+
 @misc{cardano_website,
   author       = {Cardano},
   howpublished = {\url{https://cardano.org/}},
   title        = {Cardano Official Website},
   year         = {2019}
 }
-
 @article{CASC_competition,
   abstract   = {The CADE ATP system competition (CASC) is an annual evaluation of fully automatic, first order Automated Theorem Proving (ATP) systems. CASC-21 was the twelfth competition in the CASC series. Twenty ATP systems and system variants competed in the various competition and demonstration divisions. An outline of the competition design, and a commentated summary of the results, are presented.},
   address    = {NLD},
@@ -143,6 +136,13 @@
   publisher = {Pearson Education},
   title     = {Domain-specific languages},
   year      = {2010}
+}
+
+@misc{functions-isabelle,
+  author       = {Krauss, Alexander},
+  howpublished = {\url{https://isabelle.in.tum.de/doc/functions.pdf}},
+  title        = {Defining recursive functions in Isabelle/HOL},
+  year         = {2008}
 }
 
 @inproceedings{history_of_Interactive_Theorem_Proving,
@@ -201,6 +201,13 @@
   year      = {2020}
 }
 
+@misc{marlowe_playground,
+  author       = {IOHK},
+  howpublished = {\url{https://play.marlowe-finance.io/doc/marlowe/tutorials/escrow-ex.html}},
+  title        = {Playground for the simulations of contracts written in Marlowe},
+  year         = {2021}
+}
+
 @misc{marlowe-cardano-github,
   author       = {IOHK},
   day          = {13},
@@ -209,6 +216,14 @@
   note         = {Online; accessed 26 May 2022},
   title        = {Marlowe Cardano Repository},
   year         = {2016}
+}
+
+@misc{marlowe-isabelle-repo,
+  author       = {IOHK},
+  howpublished = {\url{https://github.com/input-output-hk/marlowe/tree/master/isabelle}},
+  month        = Oct,
+  title        = {Marlowe's proofs in Isabelle, Github repository},
+  year         = {2019}
 }
 
 @misc{marlowe-language-repo,
@@ -339,6 +354,7 @@
   year      = {2013}
 }
 
+
 @inproceedings{proof_and_disproof,
   author       = {Blanchette, Jasmin Christian and Bulwahn, Lukas and Nipkow, Tobias},
   booktitle    = {International Symposium on Frontiers of Combining Systems},
@@ -350,7 +366,6 @@
   title        = {Automatic proof and disproof in Isabelle/HOL},
   year         = {2011}
 }
-
 
 @article{proof_processing_Isabelle,
   author  = {Wenzel, Makarius},
@@ -401,7 +416,6 @@
   title       = {The smt-lib standard: Version 1.2},
   year        = {2006}
 }
-
 @inproceedings{standardized_crypto_loans,
   author    = {Kondratiuk, Dmytro and Seijas, Pablo Lamela and Nemish, Alexander and Thompson, Simon},
   booktitle = {5th Workshop on Trusted Smart Contracts, Financial Cryptography and Data Security 2021},
@@ -435,6 +449,14 @@
   note         = {\url{https://ia.cr/2018/262}},
   title        = {Chimeric Ledgers: Translating and Unifying UTXO-based and Account-based Cryptocurrencies},
   year         = {2018}
+}
+@article{translating-haskell-to-isabelle,
+  author    = {Torrini, Paolo and Lueth, Christoph and Maeder, Christian and Mossakowski, Till},
+  journal   = {CADE-21},
+  pages     = {14},
+  publisher = {Citeseer},
+  title     = {Translating haskell to isabelle},
+  year      = {2007}
 }
 @article{UTxO_Lars,
   author     = {Lars Br{\"{u}}njes and
