Termino Semántica de Marlowe en Isabelle

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -131,6 +131,15 @@
   year      = {2014}
 }
 
+@inproceedings{efficient-static-analysis-marlowe-isabelle,
+  author       = {Lamela Seijas, Pablo and Smith, David and Thompson, Simon},
+  booktitle    = {International Symposium on Leveraging Applications of Formal Methods},
+  organization = {Springer},
+  pages        = {161--177},
+  title        = {Efficient static analysis of Marlowe contracts},
+  year         = {2020}
+}
+
 @book{fowler2010dsl,
   author    = {Fowler, Martin},
   publisher = {Pearson Education},
@@ -346,6 +355,7 @@
   year    = {2018}
 }
 
+
 @manual{prog-prove-isabelle,
   author    = {Nipkow, Tobias},
   booktitle = {Technical report, University of Cambridge},
@@ -353,7 +363,6 @@
   url       = {https://isabelle.in.tum.de/doc/prog-prove.pdf},
   year      = {2013}
 }
-
 
 @inproceedings{proof_and_disproof,
   author       = {Blanchette, Jasmin Christian and Bulwahn, Lukas and Nipkow, Tobias},
@@ -409,7 +418,6 @@
   title     = {Sledgehammer: Judgement Day},
   year      = {2010}
 }
-
 @techreport{SMT-LIB,
   author      = {Ranise, Silvio and Tinelli, Cesare},
   institution = {Technical report, Department of Computer Science, The University of Iowa~...},
