--- a/languages.tex
+++ b/languages.tex
@@ -4,6 +4,7 @@
 }
 \lstdefinelanguage{Isabelle}{%
   language     = ML,
+  morecomment=[s]{(*}{*)},
   morekeywords = {theory, imports, begin, end},
 }
 
@@ -36,19 +37,23 @@
 
 \definecolor{isarblue}{HTML}{006699}
 \definecolor{isargreen}{HTML}{009966}
+\definecolor{isarred}{HTML}{cc0000}
 \lstdefinelanguage{isabelle}{%
     keywords=[1]{type_synonym,datatype,fun,abbreviation,definition,proof,lemma,theorem, theory,corollary},
+    morecomment=[s]{(*}{*)},
     keywordstyle=[1]\bfseries\color{isarblue},
     keywords=[2]{where,assumes,shows,and, imports, begin, end},
     keywordstyle=[2]\bfseries\color{isargreen},
     keywords=[3]{if,then,else,case,of,SOME,let,in,O},
     keywordstyle=[3]\color{isarblue},
+    commentstyle=\color{isarred}
 }
 \lstdefinestyle{Isabelle}{%
   language=isabelle,
   escapeinside={&}{&},
   columns=fixed,
   extendedchars,
+  captionpos=b,                    
   frame=single,
   aboveskip=15pt,belowskip=15pt,
   backgroundcolor=\color{backcolour},   
